--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Mikko-sedan-kesasiirtola_75374
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Lajula, Osmo
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/8623
     wikipedia: https://fi.wikipedia.org/wiki/Osmo_Lajula
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75374#Mikko-sedan-kesasiirtola
 gutenberg_issued: '2025-02-14'
 gutenberg_type: Text
 identifiers:
